--- a/css/index.css
+++ b/css/index.css
@@ -77,6 +77,7 @@ p {
 	justify-content: space-between;
 	align-items: flex-end;
 	margin: 20px 0px 10px 0px;
+	font-size: 90%;
 }
 
 .link {
@@ -91,7 +92,7 @@ p {
 
 .hero-image {
 	width: 100%;
-	padding: 30px 0px 30px 0px;
+	padding-top: 30px;
 }
 
 .top-content {
@@ -99,6 +100,7 @@ p {
     flex-wrap: wrap;
     justify-content: space-evenly;
     margin-bottom: 20px;
+		margin-top: 20px;
     border-bottom: 1px dashed black;
 }
 
@@ -205,4 +207,48 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+}
+
+/* About Page-specific styling below */
+.top-section {
+	border-bottom: 1px dashed black;
+	padding: 20px;
+}
+
+.about-item {
+	height: 420px;
+	width: 46%;
+	text-align: left;
+	border-bottom: 1px dashed black;
+	box-sizing: border-box;
+	margin: 30px 10px 0px 10px;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-content: space-between;
+}
+
+.middle-row {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-around;
+}
+
+.middle-section {
+	display: flex;
+	flex-direction: column;
+}
+
+.learn-button {
+	background: white;
+	color: black;
+	width: 35%;
+	padding: 8px 10px;
+	font-size: 16px;
+	border: 2px solid black;
+	border-radius: 8px;
+}
+
+.bottom-section {
+	padding: 40px 20px 40px 20px;
 }
